# cdep-stats

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_LICENSE.md  README.md  TIMELINE.md  avere.html  deputat.html  deputati-activitate.html  deputati-avere.html  i18n.js  index.html  interpelari-stats.html  judete.html  motiune.html  partid.html  partide.html  proiect.html  proiecte-stats.html  pyproject.toml  requirements-dev.txt  robots.txt  sanctiune.html  search.html  sitemap.xml  status.html  vot.html
.playwright-mcp/: page-2026-05-29T07-10-45-259Z.yml  page-2026-05-29T07-11-17-113Z.yml  page-2026-05-29T07-11-28-858Z.yml  page-2026-05-29T07-11-58-831Z.yml  page-2026-05-29T07-12-13-936Z.yml  page-2026-05-29T07-12-34-395Z.yml  page-2026-05-29T07-50-59-654Z.yml  page-2026-05-29T07-51-09-551Z.yml  page-2026-05-29T07-51-18-230Z.yml  page-2026-05-29T07-51-25-800Z.yml  page-2026-05-29T08-11-24-421Z.yml  page-2026-05-29T08-13-51-302Z.yml  page-2026-05-29T08-15-20-530Z.yml  page-2026-05-29T08-17-55-258Z.yml  page-2026-05-29T08-18-17-611Z.yml  page-2026-05-29T08-41-10-763Z.yml  page-2026-05-29T08-41-18-185Z.yml  page-2026-05-29T15-15-44-464Z.yml  page-2026-05-29T15-20-58-633Z.yml  page-2026-05-29T15-26-02-754Z.yml  page-2026-05-29T17-45-31-796Z.yml  page-2026-05-29T20-29-40-687Z.yml  page-2026-05-29T20-30-02-370Z.yml  page-2026-05-29T20-30-04-994Z.yml
api/: openapi.yaml
assets/: avere-list.js  nav.js
docs/: ARCHITECTURE.md  activity-log.md  backlog.md  deploy.md  notebooklm-entities.csv  ordine-zi-entity-analysis.md  ordine-zi-split.md  (+1 more)
(+130889 files in other folders)
